@@ -34,6 +34,7 @@ PHP                                                                        NEWS
     memory_consumption or jit_buffer_size). (nielsdos)
   . Fixed bug GH-18567 (Preloading with internal class alias triggers assertion
     failure). (nielsdos)
+  . Fix leak of accel_globals->key. (nielsdos)
 
 - PDO_OCI:
   . Fixed bug GH-18494 (PDO OCI segfault in statement GC). (nielsdos)
